// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displayBalances should print a table 1`] = `
Array [
  Array [
    "
Balance:",
  ],
  Array [
    "┌──────────┬───────────────┬───────────────────────────────┬────────────────────────────┬───────────┐
│ Currency │ Total Balance │ Wallet Balance (Not Tradable) │ Channel Balance (Tradable) │ In Orders │
├──────────┼───────────────┼───────────────────────────────┼────────────────────────────┼───────────┤
│ BTC      │ 0.005         │ 0.004                         │ 0.001                      │ 0         │
└──────────┴───────────────┴───────────────────────────────┴────────────────────────────┴───────────┘",
  ],
]
`;

exports[`displayBalances should print a table with balance reserved for orders 1`] = `
Array [
  Array [
    "
Balance:",
  ],
  Array [
    "┌──────────┬───────────────┬───────────────────────────────┬────────────────────────────┬───────────┐
│ Currency │ Total Balance │ Wallet Balance (Not Tradable) │ Channel Balance (Tradable) │ In Orders │
├──────────┼───────────────┼───────────────────────────────┼────────────────────────────┼───────────┤
│ BTC      │ 0.005         │ 0.004                         │ 0.001                      │ 0.0008    │
└──────────┴───────────────┴───────────────────────────────┴────────────────────────────┴───────────┘",
  ],
]
`;

exports[`displayBalances should print a table with pending and inactive balances 1`] = `
Array [
  Array [
    "
Balance:",
  ],
  Array [
    "┌──────────┬───────────────┬──────────────────────────────────────────┬────────────────────────────┬───────────┐
│ Currency │ Total Balance │ Wallet Balance (Not Tradable)            │ Channel Balance (Tradable) │ In Orders │
├──────────┼───────────────┼──────────────────────────────────────────┼────────────────────────────┼───────────┤
│ BTC      │ 0.005         │ 0.004 (0.00075 pending | 0.001 inactive) │ 0.001 (0.00025 pending)    │ 0         │
└──────────┴───────────────┴──────────────────────────────────────────┴────────────────────────────┴───────────┘",
  ],
]
`;

exports[`displayBalances should print a table with pending balances 1`] = `
Array [
  Array [
    "
Balance:",
  ],
  Array [
    "┌──────────┬───────────────┬───────────────────────────────┬────────────────────────────┬───────────┐
│ Currency │ Total Balance │ Wallet Balance (Not Tradable) │ Channel Balance (Tradable) │ In Orders │
├──────────┼───────────────┼───────────────────────────────┼────────────────────────────┼───────────┤
│ BTC      │ 0.005         │ 0.004 (0.00075 pending)       │ 0.001 (0.00025 pending)    │ 0         │
└──────────┴───────────────┴───────────────────────────────┴────────────────────────────┴───────────┘",
  ],
]
`;

exports[`displayBalances should print a table with pending, inactive, and reserved balances 1`] = `
Array [
  Array [
    "
Balance:",
  ],
  Array [
    "┌──────────┬───────────────┬──────────────────────────────────────────┬────────────────────────────┬───────────┐
│ Currency │ Total Balance │ Wallet Balance (Not Tradable)            │ Channel Balance (Tradable) │ In Orders │
├──────────┼───────────────┼──────────────────────────────────────────┼────────────────────────────┼───────────┤
│ BTC      │ 0.005         │ 0.004 (0.00075 pending | 0.001 inactive) │ 0.001 (0.00025 pending)    │ 0.0008    │
└──────────┴───────────────┴──────────────────────────────────────────┴────────────────────────────┴───────────┘",
  ],
]
`;
